--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TuttleTuttle</title>
+    <title>TttleTttle</title>
 </head>
 <body>
 
